캐시 적용